@@ -10,7 +10,7 @@ import org.bukkit.Material;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
 
-import java.util.Arrays;
+import java.util.List;
 
 /**
  * @author YarinQuapi
@@ -34,10 +34,10 @@ public class DeleteWaypointGUI {
                             player2.sendMessage(MessagesUtils.getMessage("waypoint_delete_name_not_match"));
                         }
                     } else {
-                        return Arrays.asList(AnvilGUI.ResponseAction.replaceInputText(MessagesUtils.getMessage("gui.try_again")));
+                        return List.of(AnvilGUI.ResponseAction.replaceInputText(MessagesUtils.getMessage("gui.try_again")));
                     }
 
-                    return Arrays.asList(AnvilGUI.ResponseAction.close());
+                    return List.of(AnvilGUI.ResponseAction.close());
                 })
                 .text("Type confirm.")
                 .itemLeft(new ItemStack(Material.PAPER))
