@@ -8,7 +8,7 @@ import org.bukkit.Material;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
 
-import java.util.Arrays;
+import java.util.List;
 
 /**
  * @author YarinQuapi
@@ -28,10 +28,10 @@ public class EditWaypointItemGui {
                             player2.sendMessage(MessagesUtils.getMessage("edit_icon_failed"));
                         }
                     } else {
-                        return Arrays.asList(AnvilGUI.ResponseAction.replaceInputText(MessagesUtils.getMessage("gui.try_again")));
+                        return List.of(AnvilGUI.ResponseAction.replaceInputText(MessagesUtils.getMessage("gui.try_again")));
                     }
 
-                    return Arrays.asList(AnvilGUI.ResponseAction.close());
+                    return List.of(AnvilGUI.ResponseAction.close());
                 })
                 .text(" ")
                 .itemLeft(new ItemStack(Material.PAPER))
